--- a/src/themes/SunsetSelectionSceneStyleSheet.css
+++ b/src/themes/SunsetSelectionSceneStyleSheet.css
@@ -28,6 +28,11 @@
 	-fx-text-fill: #F5AB99;
 }
 
+#_qualityLabel {
+	-fx-background-color: #765285;
+	-fx-text-fill: #F5AB99;
+}
+
 #_searchBar {
 	-fx-background-color: #765285;
 	-fx-text-fill: #F5AB99;
