--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@../themes/PracticeSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
+<AnchorPane id="_background" prefHeight="600.0" prefWidth="900.0" stylesheets="@../themes/PracticeSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.PracticeSceneController">
    <children>
       <Label id="_label" fx:id="_currentName" alignment="CENTER" layoutX="37.0" layoutY="53.0" prefHeight="68.0" prefWidth="381.0" text="Name">
          <font>
@@ -86,7 +86,7 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <JFXProgressBar fx:id="_micSensitivityBar" layoutX="190.0" layoutY="428.0" />
+      <JFXProgressBar fx:id="_micSensitivityBar" layoutX="139.0" layoutY="426.0" prefHeight="4.0" prefWidth="229.0" />
       <JFXButton id="_button" fx:id="_deleteButton" buttonType="RAISED" layoutX="290.0" layoutY="321.0" onAction="#deleteClicked" prefHeight="36.0" prefWidth="119.0" text="Delete">
          <font>
             <Font size="14.0" />
@@ -146,7 +146,7 @@
             </Tooltip>
          </tooltip>
       </Label>
-      <Label id="_label" layoutX="121.0" layoutY="411.0" prefHeight="36.0" prefWidth="29.0" text="Mic" textAlignment="JUSTIFY">
+      <Label id="_label" layoutX="66.0" layoutY="410.0" prefHeight="36.0" prefWidth="29.0" text="Mic" textAlignment="JUSTIFY">
          <font>
             <Font size="15.0" />
          </font>
