--- a/src/themes/DarkShopSceneStyleSheet.css
+++ b/src/themes/DarkShopSceneStyleSheet.css
@@ -3,22 +3,17 @@
 }
 
 #_button {
-	-fx-background-color: #3C373D;
-	-fx-text-fill: #F92F08;
+	-fx-background-color: rgb(50, 50, 50, 0.9);
+	-fx-text-fill: red;
 }
 
 #_label {
-	-fx-background-color: rgb(50, 50, 50);
-	-fx-text-fill: #F92F08;
+	-fx-background-color: black;
+	-fx-text-fill: red;
 }
 
 #_themePane {
-	-fx-background-color: rgb(50, 50, 50);
-}
-
-#_pointLabel {
 	-fx-background-color: black;
-	-fx-text-fill: #F92F08;
 }
 
 
