--- a/src/themes/SunsetPracticeSceneStyleSheet.css
+++ b/src/themes/SunsetPracticeSceneStyleSheet.css
@@ -1,5 +1,5 @@
 #_button {
-    -fx-background-color: #AB537C;
+    -fx-background-color: #765285;
 	-fx-text-fill: #F5AB99;
 	-fx-accent: #F5AB99;
 }
