--- a/src/themes/ChocoSelectionSceneStyleSheet.css
+++ b/src/themes/ChocoSelectionSceneStyleSheet.css
@@ -1,14 +1,14 @@
 #_button {
 	
-	-fx-background-color: #65350F;
+	-fx-background-color: #453823;
 	-fx-text-fill: #BAA378;
 }
 
 #_pane {
-	-fx-color: #382E1C;
+	-fx-color: #453823;
 	color: #382E1C;
 	-fx-background-color: #382E1C;
-	-fx-background: #382E1C;
+	-fx-background: #453823;
 	-fx-text-fill: #BAA378;
 	-fx-font-fill: #BAA378;
 }
@@ -25,11 +25,6 @@
 
 #_label {
 	-fx-background-color: #382E1C;
-	-fx-text-fill: #BAA378;
-}
-
-#_qualityLabel {
-	-fx-background-color: #453823;
 	-fx-text-fill: #BAA378;
 }
 
