--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -165,16 +165,17 @@
                </children>
             </Pane>
             <Label id="_label" fx:id="_databaseFileCount" text="Database File:  " AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="2.0" />
-            <ImageView id="_image" fx:id="_shopButton" fitHeight="57.0" fitWidth="56.0" layoutX="37.0" layoutY="18.0" onMouseClicked="#shopClicked">
+            <ImageView id="_image" fx:id="_shopButton" fitHeight="57.0" fitWidth="56.0" layoutX="37.0" layoutY="18.0">
                <image>
                   <Image url="@../images/Trolley.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="_invertedShopButton" fitHeight="57.0" fitWidth="56.0" layoutX="41.0" layoutY="20.0" onMouseClicked="#shopClicked" visible="false">
+            <ImageView fx:id="_invertedShopButton" fitHeight="57.0" fitWidth="56.0" layoutX="41.0" layoutY="20.0" visible="false">
                <image>
                   <Image url="@../images/InvertedTrolley.png" />
                </image>
             </ImageView>
+            <JFXButton layoutX="26.0" layoutY="12.0" mnemonicParsing="false" onAction="#shopClicked" opacity="0.0" prefHeight="74.0" prefWidth="80.0" ripplerFill="#000000a0" textFill="TRANSPARENT" />
          </children>
       </AnchorPane>
    </center>
