--- a/src/application/PracticeScene.fxml
+++ b/src/application/PracticeScene.fxml
@@ -86,7 +86,7 @@
             </Tooltip>
          </tooltip>
       </JFXButton>
-      <JFXProgressBar fx:id="_micSensitivityBar" layoutX="139.0" layoutY="426.0" prefHeight="4.0" prefWidth="229.0" />
+      <JFXProgressBar id="_progressBar" fx:id="_micSensitivityBar" layoutX="139.0" layoutY="426.0" prefHeight="4.0" prefWidth="229.0" />
       <JFXButton id="_button" fx:id="_deleteButton" buttonType="RAISED" layoutX="294.0" layoutY="321.0" onAction="#deleteClicked" prefHeight="36.0" prefWidth="119.0" text="Delete">
          <font>
             <Font size="14.0" />
