--- a/src/themes/SunsetPracticeSceneStyleSheet.css
+++ b/src/themes/SunsetPracticeSceneStyleSheet.css
@@ -38,3 +38,7 @@
 .jfx-slider > .colored-track, .jfx-slider > .thumb, .jfx-slider > .animated-thumb {
 	-fx-background-color: #F5AB99;
 }
+
+#_progressBar > .bar {
+	-fx-background-color: #F5AB99;
+}
