--- a/src/application/ShopScene.fxml
+++ b/src/application/ShopScene.fxml
@@ -29,7 +29,7 @@
                   <Image url="@../images/Yellow_Star.png" />
                </image>
             </ImageView>
-            <JFXButton id="_button" layoutX="788.0" layoutY="90.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="51.0" text="Reset">
+            <JFXButton id="_button" layoutX="788.0" layoutY="90.0" mnemonicParsing="false" onAction="#resetButtonClicked" prefHeight="26.0" prefWidth="51.0" text="Reset">
                <font>
                   <Font size="12.0" />
                </font>
