--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.textfield.CustomTextField?>
 
-<BorderPane id="_" fx:id="_mainContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="621.0" prefWidth="966.0" stylesheets="@../themes/SelectionSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
+<BorderPane id="_" fx:id="_mainContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="621.0" prefWidth="966.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
    <left>
       <JFXTabPane id="_pane">
          <tabs>
@@ -170,7 +170,7 @@
                   <Image url="@../images/Trolley.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="_invertedShopButton" fitHeight="97.0" fitWidth="97.0" layoutX="16.0" layoutY="4.0" onMouseClicked="#shopClicked" visible="false">
+            <ImageView fx:id="_invertedShopButton" fitHeight="90.0" fitWidth="91.0" layoutX="22.0" layoutY="8.0" onMouseClicked="#shopClicked" visible="false">
                <image>
                   <Image url="@../images/InvertedTrolley.png" />
                </image>
