--- a/src/themes/ChocoPracticeSceneStyleSheet.css
+++ b/src/themes/ChocoPracticeSceneStyleSheet.css
@@ -57,6 +57,7 @@
 
 	-fx-padding: 0 0 3 0;
 }
+
 .spinner .increment-arrow-button,
 .spinner .decrement-arrow-button {
 	-fx-background-color: transparent;
@@ -72,4 +73,30 @@
 	-fx-background-color: transparent;
 	-fx-border-width: 0 0 1 0;
 	-fx-border-color: #bdbdbd;
+}
+
+.scroll-pane {
+	-fx-background-color: black;
+}
+
+.scroll-bar:horizontal, .scroll-bar:vertical{
+	-fx-background-color:transparent;
+}
+
+.increment-button, .decrement-button {
+	-fx-background-color: transparent;
+	-fx-border-color: transparent;
+}
+
+.scroll-bar:horizontal .track,
+.scroll-bar:vertical .track{
+	-fx-background-color: transparent;
+	-fx-border-color: transparent;
+	-fx-background-radius: 0em;
+}
+
+.scroll-bar:horizontal .thumb,
+.scroll-bar:vertical .thumb {
+	-fx-background-color: white;
+	-fx-background-radius: 5em;
 }
