practice scene for dark theme works perfectly

--- a/src/themes/DarkPracticeSceneStyleSheet.css
+++ b/src/themes/DarkPracticeSceneStyleSheet.css
@@ -38,3 +38,58 @@
 #_progressBar > .bar {
 	-fx-background-color: #F92F08;
 }
+
+.spinner {
+	-fx-prompt-text-fill: #F92F08;
+	-fx-text-fill: #F92F08;
+	-fx-background-color: rgb(50, 50, 50);
+	-fx-padding: 0 0 3 0;
+}
+
+.spinner .text-field {
+	-fx-background-color: rgb(50, 50, 50);
+	-fx-text-fill: #F92F08;
+	-fx-border-width: 0 0 1 0;
+}
+
+.spinner .increment-arrow-button,
+.spinner .decrement-arrow-button {
+	-fx-background-color: transparent;
+}
+
+.spinner .increment-arrow-button .increment-arrow,
+.spinner .decrement-arrow-button .decrement-arrow {
+	-fx-background-color: #F92F08;
+	-fx-font-size: 30px;
+}
+
+.scroll-pane .scroll-bar:horizontal, .scroll-pane .scroll-bar:horizontal .track {
+	-fx-background-color: rgb(50, 50, 50);
+	-fx-background-radius: 0;
+}
+
+.scroll-pane {
+	-fx-background-color: black;
+}
+
+.scroll-bar:horizontal, .scroll-bar:vertical{
+	-fx-background-color: rgb(50, 50, 50);
+}
+
+.increment-button, .decrement-button {
+	-fx-background-color: transparent;
+	-fx-border-color: transparent;
+}
+
+.scroll-bar:horizontal .track,
+.scroll-bar:vertical .track{
+	-fx-background-color: transparent;
+	-fx-border-color: transparent;
+	-fx-background-radius: 0em;
+}
+
+.scroll-bar:horizontal .thumb,
+.scroll-bar:vertical .thumb {
+	-fx-background-color: #F92F08;
+	-fx-background-radius: 5em;
+}
