--- a/src/themes/SunsetSelectionSceneStyleSheet.css
+++ b/src/themes/SunsetSelectionSceneStyleSheet.css
@@ -56,6 +56,35 @@
 	-fx-background-color: #765285;
 }
 
+.scroll-pane .scroll-bar:horizontal, .scroll-pane .scroll-bar:horizontal .track {
+	-fx-background-color: #AB537C;
+	-fx-background-radius: 0;
+}
 
+.scroll-pane {
+	-fx-background-color: #351C4D;
+}
+
+.scroll-bar:horizontal, .scroll-bar:vertical{
+	-fx-background-color: #AB537C;
+}
+
+.increment-button, .decrement-button {
+	-fx-background-color: transparent;
+	-fx-border-color: transparent;
+}
+
+.scroll-bar:horizontal .track,
+.scroll-bar:vertical .track{
+	-fx-background-color: transparent;
+	-fx-border-color: transparent;
+	-fx-background-radius: 0em;
+}
+
+.scroll-bar:horizontal .thumb,
+.scroll-bar:vertical .thumb {
+	-fx-background-color: #F5AB99;
+	-fx-background-radius: 5em;
+}
 
 
