scroll for dark theme in selection and shop matches

--- a/src/themes/DarkShopSceneStyleSheet.css
+++ b/src/themes/DarkShopSceneStyleSheet.css
@@ -21,4 +21,33 @@
 	-fx-text-fill: #F92F08;
 }
 
+.scroll-pane .scroll-bar:horizontal, .scroll-pane .scroll-bar:horizontal .track {
+	-fx-background-color: rgb(50, 50, 50);
+	-fx-background-radius: 0;
+}
 
+.scroll-pane {
+	-fx-background-color: black;
+}
+
+.scroll-bar:horizontal, .scroll-bar:vertical{
+	-fx-background-color: rgb(50, 50, 50);
+}
+
+.increment-button, .decrement-button {
+	-fx-background-color: transparent;
+	-fx-border-color: transparent;
+}
+
+.scroll-bar:horizontal .track,
+.scroll-bar:vertical .track{
+	-fx-background-color: transparent;
+	-fx-border-color: transparent;
+	-fx-background-radius: 0em;
+}
+
+.scroll-bar:horizontal .thumb,
+.scroll-bar:vertical .thumb {
+	-fx-background-color: #F92F08;
+	-fx-background-radius: 5em;
+}
