--- a/src/sample/NameSayerFileElement.fxml
+++ b/src/sample/NameSayerFileElement.fxml
@@ -14,7 +14,7 @@
             <Font size="12.0" />
          </font>
       </JFXCheckBox>
-      <CheckComboBox fx:id="_comboBox" layoutX="186.0" layoutY="14.0" prefHeight="25.0" prefWidth="107.0" />
+      <CheckComboBox id="_checkComboBox" fx:id="_comboBox" layoutX="186.0" layoutY="14.0" prefHeight="25.0" prefWidth="107.0" />
       <Label id="_qualityLabel" fx:id="_badRatingText" layoutX="187.0" layoutY="14.0" prefHeight="26.0" prefWidth="85.0" text="  Bad Quality" textAlignment="CENTER" />
    </children>
    <cursor>
