--- a/src/themes/ChocoSelectionSceneStyleSheet.css
+++ b/src/themes/ChocoSelectionSceneStyleSheet.css
@@ -5,10 +5,10 @@
 }
 
 #_pane {
-	-fx-color: #382E1C;
-	color: #382E1C;
-	-fx-background-color: #382E1C;
-	-fx-background: #382E1C;
+	-fx-color: #453823;
+	color: #453823;
+	-fx-background-color: #453823;
+	-fx-background: #453823;
 	-fx-text-fill: #BAA378;
 	-fx-font-fill: #BAA378;
 }
@@ -25,7 +25,7 @@
 
 #_checkComboBox > .combo-box {
 	-fx-background-radius: 0;
-	-fx-background-color: #453823;
+	-fx-background-color: #65350F;
 	-fx-text-fill: #BAA378;
 }
 
@@ -43,7 +43,7 @@
 }
 
 #_qualityLabel {
-	-fx-background-color: #453823;
+	-fx-background-color: #65350F;
 	-fx-text-fill: #BAA378;
 }
 
