--- a/src/application/ErrorScene.fxml
+++ b/src/application/ErrorScene.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="251.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ErrorSceneController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="251.0" prefWidth="500.0" stylesheets="@../themes/SelectionSceneStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ErrorSceneController">
    <children>
-      <Label fx:id="_warningMessage" alignment="CENTER" layoutX="112.0" layoutY="24.0" prefHeight="65.0" prefWidth="371.0" text="Warning">
+      <Label id="_label" fx:id="_warningMessage" alignment="CENTER" layoutX="112.0" layoutY="24.0" prefHeight="65.0" prefWidth="371.0" text="Warning">
          <font>
             <Font size="17.0" />
          </font>
@@ -26,7 +26,7 @@
             <Image url="@../images/Warning_Sign.png" />
          </image>
       </ImageView>
-      <JFXButton layoutX="383.0" layoutY="201.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="84.0" text="Okay">
+      <JFXButton id="_button" fx:id="_okButton" buttonType="RAISED" layoutX="383.0" layoutY="201.0" mnemonicParsing="false" onAction="#okClicked" prefHeight="28.0" prefWidth="84.0" text="Okay">
          <font>
             <Font size="15.0" />
          </font>
